fixed contrast in the light theme

--- a/src/assets/user-account-vairiables.scss
+++ b/src/assets/user-account-vairiables.scss
@@ -12,8 +12,8 @@
   :root {
     --headers-color: rgb(0, 31, 39);
     --body-bg: rgb(223, 223, 223);
-    --light-bg:  rgb(233, 233, 233);
-    --text-color: rgb(26, 26, 26);
+    --light-bg:  rgb(189, 189, 189);
+    --text-color: rgb(41, 41, 41);
     --blue-border: rgb(0, 22, 49);
     --nav-bg: rgb(100, 124, 126);
   }
