--- a/src/components/layout-components/scss/available-quiz-list.scss
+++ b/src/components/layout-components/scss/available-quiz-list.scss
@@ -2,27 +2,31 @@
 @use "../../../assets/functions_mixins" as *;
 
 .available-quiz-list {
-  @include flex(flex-start, flex-start, rem(20), column);
-  width: 100%;
-  max-width: rem(768);
-  margin: auto;
+  @include flex(flex-start, flex-start, rem(15), column);
+  padding: rem(20) rem(30);
+  @include media(medium) {
+    padding: rem(20) rem(20);
+  }
+  @include media(small) {
+    padding: rem(15) rem(5);
+  }
   .quiz-link {
+    font-size: rem(25);
+    font-weight: 600;
+    background: var(--light-bg);
     padding: rem(10) rem(15);
-    border-radius: rem(5);
-    background: var(--text-color);
     width: 100%;
-    color: var(--body-bg);
-    font-size: rem(20);
-    font-weight: 700;
-    letter-spacing: rem(0.2);
-    text-transform: uppercase;
-    cursor: pointer;
-    transition: all 200ms linear;
-    &:hover {
-      background: var(--headers-color);
+    color: var(--text-color);
+    border-radius: rem(5);
+    transition: all 100ms linear;
+    //   @include media(medium){
+    //   padding: rem(20) rem(10);
+    // }
+    @include media(small) {
+      font-size: rem(19);
     }
-    @include media(small){
-    font-size: rem(15);
+    &:hover {
+      border: 2px solid var(--blue-border);
     }
   }
 }
