--- a/src/components/layout-components/scss/user-navigation.scss
+++ b/src/components/layout-components/scss/user-navigation.scss
@@ -15,6 +15,9 @@
     @include flex(center, center, rem(20), column);
     li {
       font-size: rem(20);
+      @include media(light, 'true', prefers-color-scheme){
+        color: var(--body-bg)
+      }
     }
   }
 }
